--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
                     // Redirecting based on the country
                     if (country === 'NG') { // NG is the country code for Nigeria
-                        window.location.href = '/onistream/en.html';
+                        window.location.href = '/OniStream/onistream/en.html';
                     } else {
-                        window.location.href = '/onistream/';
+                        window.location.href = '/OniStream/onistream/';
                     }
                 })
                 .catch(error => {
