--- a/onistream/en.html
+++ b/onistream/en.html
@@ -311,7 +311,11 @@
                     <div class="dlu-detail">
                         <div class="dlu-btn mb-4">
 						<! --// android start  -->
-                            <script>
+                            <button class="btn btn-lg btn-radius btn-block btn-pre" onclick="showPopup()">
+    <i class="fab fa-android mr-2"></i>OniStream for Android
+</button>
+
+<script>
 function showPopup() {
     event.preventDefault();
 
