--- a/cards/index.html
+++ b/cards/index.html
@@ -59,7 +59,7 @@
 <body>
     <div class="form-container">
         <div class="form-header">
-            <h1>Fill the form to enter the giveaway</h1>
+            <center><h2>Fill the form to enter the giveaway</h2></center>
         </div>
         <div class="form-body">
             <form id="giveaway-form" autocomplete="off">
