--- a/cards/index.html
+++ b/cards/index.html
@@ -16,18 +16,22 @@
             top: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
         .center-content img {
-            width: 20%;
+            width: 80%;
             margin-bottom: 10px;
         }
         .center-content button {
-            width: 200px;
+            width: 80%;
             height: 50px;
             border: none;
             color: black;
             background-color: white;
-            margin: 10px;
+            margin: 10px 0;
             font-size: 1em;
             border-radius: 5px;
             transition: 0.3s;
@@ -37,35 +41,28 @@
             cursor: pointer;
         } 
         @media only screen and (max-width: 600px) {
+            .center-content img {
+                width: 100%;
+            } 
             .center-content button {
                 width: 100%;
             } 
-        }
+        }   
     </style>
 </head>
 <body>
     <div class="center-content">
-       <center>
-    <img src="logo.png" alt="Logo" style="width:50%; height:50%;" class="logoImg"> 
-</center>
-
-<style>
-    @media only screen and (max-width: 600px) {
-        .logoImg { width:50%; height:50%; }
-    }    
-</style>
+        <img src="logo.png" alt="Logo"> 
         <button id="android-btn">Install for Android</button>
         <button id="ios-btn">Install for iOS</button>
     </div>
+    <script>
+        document.getElementById('android-btn').onclick = function() {
+            window.open('Android App link', '_blank');
+        };
+        document.getElementById('ios-btn').onclick = function() {
+            window.open('iOS App link', '_blank');
+        };
+    </script>
 </body>
-<script>
-    document.getElementById('android-btn').onclick = function() {
-        // Insert Android App link here
-        window.open('Android App link', '_blank');
-    };
-    document.getElementById('ios-btn').onclick = function() {
-        // Insert iOS App link here
-        window.open('iOS App link', '_blank');
-    };
-</script>
 </html>
