--- a/cards/index.html
+++ b/cards/index.html
@@ -7,6 +7,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
+            font-size: 16px;
             background: url(background.jpg);
             background-size: cover;
         }
@@ -22,17 +23,18 @@
             justify-content: center;
         }
         .center-content img {
-            width: 80%;
-            margin-bottom: 10px;
+            width: 70%;
+            max-width: 300px;
+            margin-bottom: 20px;
         }
         .center-content button {
-            width: 80%;
-            height: 50px;
+            width: 90%;
+            min-height: 60px;
             border: none;
             color: black;
             background-color: white;
             margin: 10px 0;
-            font-size: 1em;
+            font-size: 1.2em;
             border-radius: 5px;
             transition: 0.3s;
         } 
@@ -40,14 +42,6 @@
             background-color: #ddd;
             cursor: pointer;
         } 
-        @media only screen and (max-width: 600px) {
-            .center-content img {
-                width: 100%;
-            } 
-            .center-content button {
-                width: 100%;
-            } 
-        }   
     </style>
 </head>
 <body>
