--- a/cards/index.html
+++ b/cards/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Landing Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body, html {
             height: 100%;
             margin: 0;
             padding: 0;
-            font-size: 16px;
             background: url(background.jpg);
             background-size: cover;
         }
@@ -23,25 +23,22 @@
             justify-content: center;
         }
         .center-content img {
-            width: 70%;
-            max-width: 300px;
+            width: 80%;
             margin-bottom: 20px;
         }
         .center-content button {
             width: 90%;
-            min-height: 60px;
+            height: 50px;
             border: none;
             color: black;
             background-color: white;
-            margin: 10px 0;
-            font-size: 1.2em;
+            margin-bottom: 20px;
+            font-size: 1.5em;
             border-radius: 5px;
-            transition: 0.3s;
-        } 
+        }
         .center-content button:hover {
             background-color: #ddd;
-            cursor: pointer;
-        } 
+        }
     </style>
 </head>
 <body>
@@ -52,9 +49,11 @@
     </div>
     <script>
         document.getElementById('android-btn').onclick = function() {
+            // Insert Android App link here  
             window.open('Android App link', '_blank');
         };
         document.getElementById('ios-btn').onclick = function() {
+            // Insert iOS App link here
             window.open('iOS App link', '_blank');
         };
     </script>
