--- a/cards/index.html
+++ b/cards/index.html
@@ -29,12 +29,15 @@
         .center-content button {
             width: 90%;
             height: 50px;
+            padding: 10px;
             border: none;
             color: black;
             background-color: white;
             margin-bottom: 20px;
-            font-size: 1.5em;
+            font-size: 1em;
             border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
         }
         .center-content button:hover {
             background-color: #ddd;
