--- a/cards/index.html
+++ b/cards/index.html
@@ -101,7 +101,7 @@
 <body>
     <div class="center-content">
         <img src="logo.png" alt="Logo"> 
-        <button id="android-btn" style="cursor: pointer;">Install for Android</button>
+        <button id="ios-btn" style="cursor: pointer;">Install for Android</button>
          <button id="ios-btn" style="cursor: pointer;">Install for iOS</button>
 <div id="captchaModal" class="modal">
       <div class="modal-content">
