--- a/cards/index.html
+++ b/cards/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+   <style>
     .modal {
       display: none;
       position: fixed;
@@ -24,9 +25,9 @@
       background-color: #fefefe;
       padding: 20px;
       border: 1px solid #888;
-      width: 80%; 
-      max-width: 400px; 
-      max-height: 80%; 
+      width: 80%;
+      max-width: 400px;
+      max-height: 60%; /* reduce max height to make it appear as a rectangle */
       overflow: auto;
       text-align: center;
     }
