--- a/cards/index.html
+++ b/cards/index.html
@@ -16,20 +16,19 @@
       overflow: auto;
       background-color: rgba(0,0,0,0.4);
     }
-    .modal-content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #fefefe;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%; 
-      max-width: 400px; 
-      max-height: 80%; 
-      overflow: auto;
-      text-align: center;
-    }
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    width: calc(100% - 40px); /* updated */
+    height: auto; /* updated */
+    max-width: 400px; /* updated */
+    overflow: auto;
+}
     .modal-content h3 {
       text-align: center;
     }
