--- a/cards/index.html
+++ b/cards/index.html
@@ -3,7 +3,12 @@
 <head>
     <title>Landing Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<style>
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+</style>
 <style>
     .modal {
       display: none;
