--- a/cards/index.html
+++ b/cards/index.html
@@ -3,12 +3,7 @@
 <head>
     <title>Landing Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
-</style>
+
 <style>
     .modal {
       display: none;
@@ -21,24 +16,29 @@ html, body {
       overflow: auto;
       background-color: rgba(0,0,0,0.4);
     }
-.modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fefefe;
-    padding: 20px;
-    border: 1px solid #888;
-    width: calc(100% - 40px); /* updated */
-    height: auto; /* updated */
-    max-width: 400px; /* updated */
-    overflow: auto;
-}
+    .modal-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fefefe;
+      padding: 20px;
+      border: 1px solid #888;
+      max-width: 90%; 
+      max-height: 90%; 
+      overflow: auto;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     .modal-content h3 {
       text-align: center;
     }
     #captcha-section {
       text-align: center;
+      width: 100%;
     }
     .loader {
       border: 16px solid #f3f3f3;
@@ -54,10 +54,10 @@ html, body {
       100% { transform: rotate(360deg); }
     }
     .captcha-popup-box {
-      position: fixed !important;
-      top: 50% !important;
-      left: 50% !important;
-      transform: translate(-50%, -50%) !important;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
     </style>
 
