--- a/cards/index.html
+++ b/cards/index.html
@@ -17,25 +17,24 @@
       background-color: rgba(0,0,0,0.4);
     }
     .modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fefefe;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 90%; // increased from 80%
-    max-width: 90%; // max-width now 90% of the viewport width
-    max-height: 80%; 
-    overflow: auto;
-    text-align: center;
-}
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fefefe;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%; 
+      max-width: 800px; 
+      max-height: 80%; 
+      overflow: auto;
+      text-align: center;
+    }
     .modal-content h3 {
       text-align: center;
     }
     #captcha-section {
       text-align: center;
-      width: 100%;
     }
     .loader {
       border: 16px solid #f3f3f3;
@@ -51,10 +50,10 @@
       100% { transform: rotate(360deg); }
     }
     .captcha-popup-box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      position: fixed !important;
+      top: 50% !important;
+      left: 50% !important;
+      transform: translate(-50%, -50%) !important;
     }
     </style>
 
