--- a/cards/index.html
+++ b/cards/index.html
@@ -17,19 +17,26 @@
       background-color: rgba(0,0,0,0.4);
     }
     .modal-content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #fefefe;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%; 
-      max-width: 800px; 
-      max-height: 80%; 
-      overflow: auto;
-      text-align: center;
-    }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  max-height: 80%; 
+  overflow: auto;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .modal-content {
+    width: 90%; /* Change the percentage as per your requirement */
+    max-height: 90%;
+  }
+}
     .modal-content h3 {
       text-align: center;
     }
