--- a/amazon/index.html
+++ b/amazon/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wish.com Coupon Finder</title>
+<title>Amazon Coupon Finder</title>
 <style>
 .modal {
   display: none;
@@ -169,7 +169,7 @@
 </div></center>
 
 <div class="search-box">
-  <input type="text" class="search-input" placeholder="Enter wish.com product URL">
+  <input type="text" class="search-input" placeholder="Enter Amazon product URL">
   <button class="button" id="findCoupon-btn">Find Coupon</button>
 </div>
 
